--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "chromedriver": "^2.21.2",
+    "codeclimate-test-reporter": "^0.4.0",
     "connect-history-api-fallback": "^1.1.0",
     "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
